# Cpp17Play

./: .gitignore  CMakeLists.txt  README
.scripts/: run_clang-format.sh
cpp17Play/: CMakeLists.txt
cpp17Play/design_pattern/: AbstractFactory.hpp  CMakeLists.txt  Singleton.hpp
cpp17Play/design_pattern/behavioural_patterns/: CMakeLists.txt  ChainOfResponsibility.hpp
cpp17Play/design_pattern/behavioural_patterns/test/: CMakeLists.txt  test_ChainOfResponsibility.cpp
cpp17Play/design_pattern/creational_patterns/: AbstractFactory.hpp  BuilderDirector.hpp  CMakeLists.txt  Prototype.hpp  Singleton.hpp
cpp17Play/design_pattern/creational_patterns/test/: CMakeLists.txt  test_AbstractFactory.cpp  test_BuilderDirector.cpp  test_Prototype.cpp  test_Singleton.cpp
cpp17Play/design_pattern/structural_patterns/: Adapter.hpp  CMakeLists.txt
cpp17Play/design_pattern/structural_patterns/test/: CMakeLists.txt  test_Adapter.cpp
cpp17Play/design_pattern/test/: CMakeLists.txt  test_AbstractFactory.cpp  test_Singleton.cpp
cpp17Play/network/: CMakeLists.txt  TcpServer.cpp  TcpServer.hpp
cpp17Play/network/example/: CMakeLists.txt  example_HttpServer.cpp
cpp17Play/utils/: CMakeLists.txt
cpp17Play/utils/Logger/: CMakeLists.txt  ConsoleLogHandler.cpp  ConsoleLogHandler.hpp  LogHandler.cpp  LogHandler.hpp  LogHandlerType.hpp  LogLevel.cpp  LogLevel.hpp  LogService.hpp  Logger.cpp  Logger.hpp
cpp17Play/utils/Logger/example/: CMakeLists.txt  example_ConsoleLog.cpp
cpp17Play/utils/Logger/test/: CMakeLists.txt  test_LogHandler.cpp  test_LogLevel.cpp
